--- a/src/style.css
+++ b/src/style.css
@@ -320,6 +320,47 @@ a:focus {
   margin-bottom: var(--spacing-8);
 }
 
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+nav ul li {
+  margin-right: 10px;
+}
+
+
+.navigation li {
+  float: left;
+}
+
+.navigation li a {
+  display: block;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  transition: background 0.5s ease;
+  margin-left: -10px; 
+  
+  /* Create a background and apply it to the text only, then make the text transparent */
+  background: linear-gradient(90deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.navigation li a:hover {
+  background: linear-gradient(90deg, #1c92d2 0%, #f2fcfe 99%, #f2fcfe 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+
 /* Media queries */
 
 @media (max-width: 42rem) {
