--- a/src/style.css
+++ b/src/style.css
@@ -197,6 +197,10 @@ li > ul {
   margin-top: calc(var(--spacing-8) / 2);
 }
 
+li {
+  list-style-type: none;
+}
+
 blockquote {
   color: var(--color-text-light);
   margin-left: calc(-1 * var(--spacing-6));
